Recovered DGL chapter, shitty computer

--- a/thesis_skel/thesis_appendix_B.tex
+++ b/thesis_skel/thesis_appendix_B.tex
@@ -16,7 +16,7 @@ The comparison was done by calculating the ratio of the surviving events for bot
 \begin{figure}[h!]
   \centering
   \includegraphics[width=0.95\textwidth]{thesis_figures/App2/Efficiency_vs_slant_comp_all_HModel.pdf}
-  \caption{Cmparison of the T3 and $\nu$ identification efficiency for SIBYLL 2.3d, EPOS-LHC and QGSJET-II-04 for $\nu_e$ CC showers with a primary energy of $10^{19}$eV for a zenith angle of $72^\circ$ for five different injected slant depths. The error bars signify the statistical error.}
+  \caption{Comparison of the T3 and $\nu$ identification efficiency for SIBYLL 2.3d, EPOS-LHC and QGSJET-II-04 for $\nu_e$ CC showers with a primary energy of $10^{19}$eV for a zenith angle of $72^\circ$ for five different injected slant depths. The error bars signify the statistical error.}
   \label{fig:Eff_vs_slant_comp_all_HModels}
 \end{figure}
 
