--- a/thesis_skel/thesis_setup.tex
+++ b/thesis_skel/thesis_setup.tex
@@ -7,10 +7,9 @@
 \begin{figure}[h!]
 \centering
 \includegraphics[width=\textwidth]{thesis_figures/Setup/map_srij_version.pdf}
-\caption{Layout of the Pierre Auger Observatory in Argentina. The black lines indicate the field of view of each telescope. Redone from~\cite{} }
+\caption{Layout of the Pierre Auger Observatory in Argentina. The black lines indicate the field of view of each telescope. Redone from~\cite{Jannis_thesis} }
 \label{fig:Auger_map}
 \end{figure}
-\todo{Modify this figure more}
 
 The Pierre Auger Observatory~\cite{Auger:2015} is the largest CR observatory in the world. Located outside Malargüe in the Argentinian \textit{pampas}, the observatory spans across an area of 3000 km$^2$. Originally conceptualized in the 1990s, it was built in the early 2000s and fully completed in 2008. Geographically the site is located near the base of the Andes at an altitude of 1400 m above sea level and is relatively flat across its whole span. The observatory was designed to detect CR-induced EASs having primary energy of $10^{17}$eV to $10^{20}$eV and beyond. It does so by identifying the EAS via two different complementary detecting components: \textit{\acrlong{SD}} array (\acrshort{SD}) and the \textit{Fluorescence Detector} (\acrshort*{FD}). A schematic of the observatory is shown in Fig.~\ref{fig:Auger_map}. The SD consists of 1660 water Cherenkov tanks spread in a triangular grid with 1.5 km spacing. The FD consists of four sites with 27 telescopes located at the edges of the ground array and overlooking the sky above. The observatory also consists of various atmospheric monitoring devices such as LIDARs~\cite{BENZVI2007171}, laser facilities~\cite{article_clf,Lawrence_Wiencke_2009} and other weather sensors to constantly monitor the atmosphere which is important for FD operation. With the AugerPrime upgrade of the observatory which is scheduled to be finished in 2024 two new detecting components are being added: The \textit{\acrlong{RD}} (\acrshort{RD})~\cite{Horandel:2023XL} and the \textit{\acrlong{UMD}} (\acrshort{UMD})~\cite{AbdulHalim:2023ZF}. The tanks are also being upgraded with the addition of a scintillator on top~\cite{Cataldi:2021uwd}. The individual components of the new upgrade are not discussed in detail since they are not used in the context of this thesis but only AugerPrime as a whole and its potential for detecting neutrinos at the Pierre Auger Observatory is discussed later.
 
