--- a/thesis_skel/thesis_refs.bib
+++ b/thesis_skel/thesis_refs.bib
@@ -80,6 +80,13 @@
   doi       = {10.1103/RevModPhys.11.288},
   url       = {https://link.aps.org/doi/10.1103/RevModPhys.11.288}
 }
+@misc{Jannis_thesis,
+  author       = {Jannis Pawlowsky},
+  title        = {Search for inclined photon induced air showers with the AugerPrime Radio Detector},
+  url          = {https://astro.uni-wuppertal.de/fileadmin/physik/astro/mainpage/publications/theses/Diplom/phd-pawlowsky-final.pdf},
+  year         = {2024}
+}
+
 @article{Auger:2015,
   volume    = {798},
   issn      = {0168-9002},
