Wrote acknowledgements and Leonel's corrections

--- a/thesis_skel/thesis_CRnNu.tex
+++ b/thesis_skel/thesis_CRnNu.tex
@@ -9,18 +9,18 @@
 \label{sec:UHECR}
 \subsection{History}
 \label{subsec:crhist}
-As already mentioned in the introduction \glspl{CR} have been a source of investigation for more than a century now. Even before the balloon flight by Victor Hess, it was Henry Becquerel, the discoverer of radioactivity who believed that the \textit{atmospheric electricity} (ionization of air) was due to the radioactive substances present on Earth. In such a scenario the ionization rate should decrease the higher up you go in the atmosphere. The first measurements disproving this theory were performed by Theodor Wulf in 1909 with his own developed electrometer. His measurements published in the \textit{Physikalische Zeitschrift} indicated a higher level of radiation at the top of the Eiffel Tower as compared to its base. Unfortunately, the measurements were not widely accepted, and it would take three years till Victor Hess via his several balloon flights provided irrefutable measurements corroborating Wulf's observations.
+\glspl{CR} have been a source of investigation for more than a century now. Even before the balloon flight by Victor Hess, it was Henry Becquerel, the discoverer of radioactivity, who believed that the \textit{atmospheric electricity} (ionization of air) was due to the radioactive substances present on Earth. In such a scenario the ionization rate should decrease the higher up you go in the atmosphere. The first measurements disproving this theory were performed by Theodor Wulf in 1909 with his own developed electrometer. His measurements published in the \textit{Physikalische Zeitschrift} indicated a higher level of radiation at the top of the Eiffel Tower as compared to its base. Unfortunately, the measurements were not widely accepted, and it would take three years till Victor Hess, via his several balloon flights, provided irrefutable measurements corroborating Wulf's observations.
 
 Between 1911 and 1912 Victor Hess performed nine (2 in 1911 and 7 in 1912) balloon flights going as high as 5350 m a.s.l to measure the dependence of ionization rate to altitude. He carried with him three Wulf electrometers, two tuned for $\gamma$ rays and the third tuned for $\beta$ rays~\cite{hess2018observationspenetratingradiationseven}which along with $\alpha$ were the only three known radioactive decays. His measurements published in the Proceedings of the Viennese Academy of Sciences~\cite{Hess:1912srp} showed that the radiation level decreased slightly up to a certain altitude ($\sim$1 km) but after this height, the radiation increased significantly and at the highest flown altitudes reached levels about twice in comparison to the ones at sea level. Some of his measurements were done during the night and one during a partial solar eclipse which further made him rule out the Sun as a source of this radiation. With further confirmations via the measurements by Werner Kolhörster in 1914 and Robert Millikan, in 1925, Victor Hess was awarded the Nobel Prize in Physics in 1936. 
 
-\glspl{CR} were still presumed to be gamma rays. This supposition was quickly negated by the efforts of Jacob Clay who via his measurements of the \gls{CR} intensity at different latitudes while sailing from Java to the Netherlands in 1927~\cite{Clay:1927I} showed that the geomagnetic field had a significant effect on the intensity. Further observations of the \textit{East-West} effect, the directional dependent intensity due to the charge of the primary \glspl{CR}, predicted by Bruno Rossi~\cite{PhysRev.36.606}, by various experiments~\cite{PhysRev.43.834}~\cite{PhysRev.43.835} concluded that the intensity was greater from the west proving that \gls{CR} primaries have a positive charge.
+\glspl{CR} were still presumed to be gamma rays. This supposition was quickly negated by the efforts of Jacob Clay, who via his measurements of the \gls{CR} intensity at different latitudes while sailing from Java to the Netherlands in 1927~\cite{Clay:1927I}, showed that the geomagnetic field had a significant effect on the intensity. Further observations of the \textit{East-West} effect, the directional dependent intensity due to the charge of the primary \glspl{CR}, predicted by Bruno Rossi~\cite{PhysRev.36.606}, by various experiments~\cite{PhysRev.43.834}~\cite{PhysRev.43.835} concluded that the intensity was greater from the west, proving that \gls{CR} primaries have a positive charge.
 
-Today we use \glspl{CR} to describe the highly energetic charged particles/nuclei travelling at very high speeds through space. The Earth is constantly bombarded by \glspl{CR}, some originating from the Sun but most of them from outside our Solar System. In more than 100 years since Victor Hess's balloon flight, we have gathered a lot more information and have achieved a better understanding of \glspl{CR}. We have detected \glspl{CR} up to energies $\sim 10^{20}$eV~\cite{TA_2023} which is an impressive feat since at these energies the expected flux drops below one particle/$km^2$. We know a lot more about the composition of the \glspl{CR} and have also proposed models explaining their origin and their journey to Earth. \glspl{CR} continue to be a source of fascination. Some of the achievements are summarised below along with some unanswered questions about \glspl{CR}. 
+Today we use the term \glspl{CR} to describe the highly energetic charged particles/nuclei travelling at very high speeds through space. The Earth is constantly bombarded by \glspl{CR}, some originating from the Sun but most of them from outside our Solar System. In more than 100 years since Victor Hess's balloon flights, we have gathered a lot more information and have achieved a better understanding of \glspl{CR}. We have detected \glspl{CR} up to energies $\sim 10^{20}$eV~\cite{TA_2023} which is an impressive feat since at these energies the expected flux drops below one particle/$\text{km}^2$ yr. We know a lot more about the composition of the \glspl{CR} and have also proposed models explaining their origin and their journey to Earth. \glspl{CR} continue to be a source of fascination. Some of the achievements are summarised below along with some unanswered questions about \glspl{CR}. 
 
 \subsection{Origin}
 \label{subsec:crorig}
 To understand the sources of \glspl{CR} one needs to understand the mechanisms that could impart huge amounts of energies to the tiny particles that actually reach the Earth. We already know that the low energy \glspl{CR} which reach our Earth are predominantly coming from the Sun. The evidence for this comes from the observation of an increase in these with a coincidence to the violent activity of the sun. Most of the \glspl{CR} and \glspl{UHECR}, E > $10^{18}$eV, do not exhibit this temporal coincidence and are thought to have originated in our Galaxy or beyond respectively. Two different mechanisms could explain how the CR particles are accelerated to such high energies over large distances: \textit{bottom-up}~\cite{1984ARA&A..22..425H,Blandford_2000,1993A&A...272..161R} and \textit{top-down}~\cite{Bhattacharjee_2000,Busca_2006}. The \textit{top-down} approach assumes that the \glspl{UHECR} are produced due to the decay or annihilation of extremely massive or exotic particles.
-Both of these mechanisms have been investigated with various experiments including the Pierre Auger Observatory. With the current observations, the top-down models face significant challenges. The extremely high energies required for the annihilation of the hypothesized exotic particles and the lack of evidence for their existence make it very difficult to both verify and rule out the top-down mechanism. The continued improvement in understanding of astroparticle physics and the early universe makes the study of \glspl{UHECR} an exciting and active area for research with the mystery of their origin and propagation still waiting for a solution. 
+Both of these mechanisms have been investigated with various experiments including the Pierre Auger Observatory~\ref{chap:setup}. With the current observations, the top-down models face significant challenges. The extremely high energies required for the annihilation of the hypothesized exotic particles and the lack of evidence for their existence make it very difficult to both verify and rule out the top-down mechanism. The continued improvement in understanding of astroparticle physics and the early universe makes the study of \glspl{UHECR} an exciting and active area for research with the mystery of their origin and propagation still waiting for a solution. 
 
 \begin{figure}[t!]
   \centering
@@ -31,12 +31,12 @@ Both of these mechanisms have been investigated with various experiments includi
 
 \subsubsection{Bottom-up scenario}
 \label{subsec:Bupsce}
-There are many proposed ways in which \glspl{CR} could get accelerated by astrophysical sources. One of the most widely accepted descriptions that can explain most of the observed \glspl{CR} that originate from our Galaxy is the diffusive shock acceleration also known as Fermi acceleration~\cite{PhysRev.75.1169}. Qualitatively one can explain Fermi acceleration as follows: When a massive star reaches the end of its life cycle it can undergo a supernova explosion. During this, the star core collapses and an intense shockwave propagates outwards towards the star's outer layers. As the shock wave progresses and moves through the \gls{ISM} it sweeps up and compresses the surrounding gas and magnetic fields creating a region of very high pressure and magnetic turbulence known as the shock front. The charged particles can get trapped in such a shock front and repeatedly cross over this region of magnetic turbulence experiencing magnetic irregularities and constantly changing direction in a collision-less way thus experiencing electric fields each time they cross which accelerate them to higher energies. An illustration is shown in fig.~\ref{fig:Shock_cartoon}. The shock front is turbulent, and particles can cross it multiple times, gaining energy at each passage. Eventually, some particles can acquire enough energy to escape the shock region and travel the required distances to reach the Earth. Such an explanation can explain the \glspl{CR} originating in our Galaxy and point towards supernovae and its remnants as potential sources but to explain the \glspl{UHECR} (>$10^{19}$eV) we need other sources and mechanisms. The energy that can be produced by the accelerator is limited by the gyroradius of the accelerator. This has been illustrated by Hillas~\cite{1984ARA&A..22..425H} where he illustrated the potential sources of \glspl{CR} on a plot of magnetic field strength vs size. A modified version of his original plot with the inclusion of modern sources is shown in fig.~\ref{fig:Hillas_modified}. Another limitation to the energy of the \glspl{CR} produced by different sources is the energy budget that an accelerator must possess. This has been estimated in~\cite{Murase:2008sa} under the assumption that \glspl{UHECR} are primarily extragalactic protons and at Auger from the measurements of the CR spectrum in~\cite{2018_auger_comp_spec}
+There are many proposed ways in which \glspl{CR} could get accelerated by astrophysical sources. One of the most widely accepted descriptions that can explain most of the observed \glspl{CR} that originate from our Galaxy is the diffusive shock acceleration also known as Fermi acceleration~\cite{PhysRev.75.1169}. Qualitatively one can explain Fermi acceleration as follows: High energy violent phenomena such as a massive star reaching the end of its life cycle and undergoing a supernova explosion can produce an intense shockwave which propagates outwards towards the star's outer layers. As the shock wave progresses and moves through the \gls{ISM} it sweeps up and compresses the surrounding gas and magnetic fields creating a region of very high pressure and magnetic turbulence known as the shock front. The charged particles can get trapped in such a shock front and repeatedly cross over this region of magnetic turbulence experiencing magnetic irregularities and constantly changing direction under magnetic confinement thus experiencing electric fields each time they cross which accelerate them to higher energies. An illustration is shown in fig.~\ref{fig:Shock_cartoon}. The shock front is turbulent, and particles can cross it multiple times, gaining energy at each passage. Eventually, some particles can acquire enough energy to escape the shock region and travel the required distances to reach the Earth. Such an interpretation can explain the \glspl{CR} originating in our Galaxy (<$10^{15}$eV) and point towards supernovae and its remnants as potential sources but to explain the \glspl{UHECR} (>$10^{19}$eV) we need other sources and mechanisms. The energy that can be produced by the accelerator is limited by the gyroradius of the accelerator. This has been illustrated by Hillas~\cite{1984ARA&A..22..425H} where he illustrated the potential sources of \glspl{CR} on a plot of magnetic field strength vs size. A modified version of his original plot with the inclusion of modern sources is shown in fig.~\ref{fig:Hillas_modified}. Another limitation to the energy of the \glspl{CR} produced by different sources is the energy budget that an accelerator must possess. This has been estimated in~\cite{Murase:2008sa} under the assumption that \glspl{UHECR} are primarily extragalactic protons and at Auger~\cite{2018_auger_comp_spec} via the measurements of the CR spectrum. 
 
 \begin{figure}[t!]
   \centering
   \includegraphics[width=14.5cm]{thesis_figures/CRnNu/Hillas_modified.png}
-  \caption{An updated version of Hillas plot. Different source classes are plotted according to their radial size, $R$ (abscissa), and magnetic field strength, $B$. The solid and dashed lines indicate the lower limits beyond which confinement of protons (red) and iron (blue) nuclei with energy $10^{20}$eV are possible. The solid and dashed lines indicate different shock velocities. Taken from~\cite{AlvesBatista:2019tlv}}
+  \caption{An updated version of Hillas plot. Different source classes are plotted according to their radial size, $R$ (abscissa), and magnetic field strength, $B$. The solid and dashed lines indicate the lower limits above which confinement of protons (red) and iron (blue) nuclei with energy $10^{20}$eV are possible. The solid and dashed lines indicate different shock velocities. Taken from~\cite{AlvesBatista:2019tlv}}
   \label{fig:Hillas_modified}
 \end{figure}
 
@@ -45,17 +45,17 @@ Other accelerating mechanisms are as follows:
 
 1. Supernova Remnants:  Interactions of \glspl{CR} with the magnetic fields within the remnants could lead to further acceleration~\cite{BLASI_2011}.
 
-2. \glspl{AGN}: These are regions in the centre of galaxies that are capable of producing highly energetic particles. The source of this capability is theorized to be supermassive black holes. The extreme conditions near the black holes such as strong magnetic fields and high-energy jets could accelerate \glspl{UHECR}.~\cite{Rieger_2022}
+2. \glspl{AGN}: These are regions in the centre of galaxies that are capable of producing highly energetic particles. The source of this capability is theorized to be powered by supermassive black holes. The extreme conditions near the black holes such as strong magnetic fields and high-energy jets could accelerate \glspl{UHECR}.~\cite{Rieger_2022}
 
 3. Magnetar Outbursts: Magnetars are neutron stars having a magnetic field $\sim$1000 times that of a normal neutron star. They are known to produce magnetically powered bursts which could potentially accelerate particles to \gls{UHECR} level energies.~\cite{PhysRevD.84.023002}
 
-4. Pulsar Wind Nebulae: Rapidly rotating neutron stars, also known as Pulsars emit beams of electromagnetic radiation. Such beams can collide with ISM creating a pulsar wind nebulae, a region similar to a shock wave front and can lead to production of \glspl{UHECR}.~\cite{Cerutti_2020}
+4. Pulsar Wind Nebulae: Rapidly rotating neutron stars, also known as Pulsars emit beams of electromagnetic radiation. Such beams can collide with the ISM creating a pulsar wind nebulae, a region similar to a shock wave front and can lead to production of \glspl{UHECR}.~\cite{Cerutti_2020}
 
-5. Galaxy Clusters: These are regions of massive galaxy populations bound together by gravity. These highly dense structures can accelerate particles either by themselves or via the shock waves associated with a potential merging of different galaxy clusters.~\cite{Murase_2008,Condorelli_2023} 
+5. Galaxy Clusters: These are regions of galaxy populations bound together by gravity. These highly dense structures can accelerate particles either by themselves or via the shock waves associated with a potential merging of different galaxy clusters.~\cite{Murase_2008,Condorelli_2023} 
 
 6. Relativistic shocks: Other types of astrophysical shocks such as those occurring in gamma-ray bursts or colliding stellar winds could also create scenarios that could accelerate particles to \gls{UHECR} level energies.~\cite{Kirk_2000,10.1046/j.1365-8711.2001.04851.x}
 
-The validity of all such hypothesized mechanisms can be checked by corroborating their spectral index predictions with those observed by the experiments. 
+The validity of all such hypothesized mechanisms could be checked by corroborating their spectral index predictions with those observed by the experiments. 
 
 \subsubsection{Top-down scenario}
 \label{subsec:Tdownsce}
@@ -67,15 +67,15 @@ This is an alternative approach to explaining \glspl{UHECR}. The main idea behin
 
 3. Other Topological effects: These include defects like monopoles or domain walls which could also produce exotic particles which can further decay into \glspl{UHECR}.~\cite{PhysRevLett.79.5202} 
 
-There are other scenarios such as the breakdown of Lorentz invariance which attack the problem of \glspl{UHECR} not by suggesting a new mechanism for their production but their propagation which can also have a major effect on the observations of \glspl{CR} and \glspl{UHECR} we observe on Earth. Some of these models can be constrained by again looking at the flux of the \glspl{UHECR}~\cite{PierreAuger:2021tog}. There are also experiments that try to directly look for these exotic particles~\cite{XENON:2023cxc,LZ:2022lsv}. So far, no evidence has been found to support the existence of these particles. 
+There are other scenarios such as the breakdown of Lorentz invariance which attack the problem of \gls{UHECR} acceleration not by suggesting a new mechanism for their propogation rater than their production. Some of these models can be constrained by again looking at the flux of the \glspl{UHECR}~\cite{PierreAuger:2021tog}. There are also experiments that try to directly look for these exotic particles~\cite{XENON:2023cxc,LZ:2022lsv}. So far, no evidence has been found to support the existence of these particles. 
 
 \subsection{Propagation}
 \label{subsec:crprop}
-However, production is just one part of the life of \glspl{CR} or \glspl{UHECR}. To get detected on Earth the \glspl{CR} and \glspl{UHECR} have to travel large distances through ISM during which they can suffer various losses which ultimately affect the spectrum we see on Earth. Some main processes include losses by ionization due to collision with ISM, Coulomb Scattering which can cause random changes to the direction, and Synchrotron Radiation which can lead to the emission of high energy photons and, consequently, energy loss for the \gls{CR} particle and through collisions with high-energy photons from radiation fields leading to breakage of CR nuclei also known as Photo-disintegration. Other propagation effects such as Bremsstrahlung and Inverse Compton Scattering due to interactions with the \gls{CMB} are the reasons high energy \gls{CR} electrons cannot propagate large distances. A few other mechanisms include Adiabatic Energy Loss which can occur when a CR particle traverses through regions of high pressure or magnetic field strength to regions of lower pressure and magnetic field strength leading to a decrease in its velocity, Scattering due to going through magnetic turbulent areas or even an escape of \glspl{UHECR} from our Galaxy can all affect the spectrum of \glspl{CR} and \glspl{UHECR} we see at Earth. One of the critical phenomena to understand \gls{CR} propagation and to realize a theoretical limit to the energy of \glspl{UHECR} is the \gls{GZK} cutoff. This is discussed in more detail below.
+Production is just one part of the life of \glspl{CR} or \glspl{UHECR}. To get detected on Earth the \glspl{CR} and \glspl{UHECR} have to travel large distances through ISM during which they can suffer various losses which ultimately affect the spectrum we see on Earth. Some main processes include losses by ionization due to collision with ISM, Synchrotron Radiation which can lead to the emission of high energy photons and, consequently, energy loss for the \gls{CR} particle and through collisions with low-energy photons from radiation fields leading to breakage of CR nuclei also known as Photo-disintegration. Other propagation losses such as Bremsstrahlung and Inverse Compton Scattering due to interactions with the \gls{CMB}, are the reasons high energy \gls{CR} electrons cannot propagate large distances. A few other mechanisms include Adiabatic Energy Loss which affects the energy density due to expansion, Scattering due to magnetic diffusion or even an escape of \glspl{UHECR} from our Galaxy can all affect the spectrum of \glspl{CR} and \glspl{UHECR} we see at Earth. One of the critical phenomena to understand \gls{CR} propagation and to realize a theoretical limit to the energy of \glspl{UHECR} is the \gls{GZK} cutoff. This is discussed in more detail below.
 
 \subsubsection{GZK Limit}
 \label{subsubsec:GZK} 
-The \gls{GZK} cutoff was first proposed by Kenneth Greisen, an American physicist in 1966 in a paper titled "End to the Cosmic-Ray Spectrum?"~\cite{PhysRevLett.16.748}. He discussed the potential energy loss of high-energy \glspl{CR} due to interactions with the CMB. He calculated a threshold energy above which \glspl{CR} in his case protons would lose energy through interactions with \gls{CMB}. In the same year, two Soviet physicists, Georgiy Zatsepin and Vadim Kuzmin, arrived at a similar prediction. Their calculations published in their paper "Upper Limit of the Spectrum of Cosmic Rays"~\cite{Zatsepin:1966jv} were consistent with Griesen's work and reinforced the concept of the \gls*{GZK} cutoff.  
+The \gls{GZK} cutoff was first proposed by Kenneth Greisen, an American physicist in 1966 in a paper titled "End to the Cosmic-Ray Spectrum?"~\cite{PhysRevLett.16.748}. He discussed the potential energy loss of high-energy \glspl{CR} due to interactions with the CMB and calculated a threshold energy above which \glspl{CR} in his case protons would lose energy through interactions with \gls{CMB}. In the same year, two Soviet physicists, Georgiy Zatsepin and Vadim Kuzmin, arrived at a similar prediction. Their calculations published in their paper "Upper Limit of the Spectrum of Cosmic Rays"~\cite{Zatsepin:1966jv} were consistent with Griesen's work and reinforced the concept of the \gls*{GZK} cutoff.  
 The energy cutoff calculated is about 5 x $10^{19}$~\gls{eV} or about 8~joules. The dominant mechanisms via which the proton can interact with the photons of the \gls*{CMB} are given below. 
 
 \begin{equation}\label{eq:GZK}
