--- a/thesis_skel/thesis_glossary.tex
+++ b/thesis_skel/thesis_glossary.tex
@@ -35,8 +35,8 @@
 \newacronym{DGH}{DG$\mathrm{_{high}}$}{down-going high}
 \newacronym{ES}{ES}{Earth-skimming}
 \newacronym{TA}{TA}{Telescope Array}
-\newacronym{CNB}{CNB}{cosmic neutrino background}
-\newacronym{CMB}{CMB}{cosmic microwave background}
+\newacronym{CNB}{CNB}{Cosmic Neutrino Background}
+\newacronym{CMB}{CMB}{Cosmic Microwave Background}
 \newacronym{ISM}{ISM}{interstellar medium}
 \newacronym{AGN}{AGN}{Active Galactic Nuclei}
 \newacronym{eV}{eV}{electronvolts}
