--- a/thesis_skel/thesis_intro.tex
+++ b/thesis_skel/thesis_intro.tex
@@ -10,7 +10,7 @@
 \caption{Window to the inner workings of the Universe is only half opened. (better caption?)}
 \label{fig:intro}
 \end{figure}
-The need to understand how something works or why something is? is ingrained in every human. While attempting to find answers for these questions one either answers them conclusively or finds oneself asking additional questions stemming from the original. One such question which bothered physicists at the beginning of the 20th century and eventually led to the field of \textit{astro-particle physics} was of so-called "atmosphere electricity" or ionization of air. After the pioneering discoveries by Theodor Wulf~\cite{article_Wulf} and Victor Hess~\cite{Hess:1912srp} who found the increase of this ionization rate with altitude and theorized the origin of this radiation to be not earth but something above our atmosphere, the name \textit{cosmic rays} was coined by Robert Millikan who believed these rays were originating from primary photons. This hypothesis was rejected by the measurements done by Jacob Clay~\cite{Clay:1927I,Clay:1928II} in 1927 who observed a latitude dependence of the intensity of \glspl{CR} concluding this to be a deflection of the primary \glspl{CR} by the geomagnetic field of the earth which indicated that these rays must be charged particles. After this came the efforts of B. Rossi~\cite{rossi1933eigenschaften}, German group~\cite{schmeiser1938harten} and P. Auger~\cite{RevModPhys.11.288} all independently discovering coincident signals in separated Geiger counters which they explained by the counters being struck by an extensive particle shower triggered by a primary \gls{CR}. The phenomenon was named \textit{sciami} by Rossi, \textit{Luftshauer} by the German group and "Auger showers" by Auger and his collaborators. Auger went one step further by further estimating the primary energy of the \gls{CR} via his superior setup giving rise to some questions about \glspl{CR} which are yet unanswered, how are they created and where are they coming from. One of the known sources which is the Sun is too close to explain some other high energy \glspl{CR} constantly hitting the Earth's atmosphere. Since then the field has only expanded with numerous experiments set up to characterize these \glspl{CR}. 
+The need to understand how something works or why something is? is ingrained in every human. While attempting to find answers for these questions one either answers them conclusively or finds oneself asking additional questions stemming from the original. One such question which bothered physicists at the beginning of the 20th century and eventually led to the field of \textit{astro-particle physics} was of so-called "atmosphere electricity" or ionization of air. After the pioneering discoveries by Theodor Wulf~\cite{article_Wulf} and Victor Hess~\cite{Hess:1912srp} who found the increase of this ionization rate with altitude and theorized the origin of this radiation to be not earth but something above our atmosphere, the name \textit{cosmic rays} was coined by Robert Millikan who believed these rays were originating from primary photons. This hypothesis was rejected by the measurements done by Jacob Clay~\cite{Clay:1927I,Clay:1928II} in 1927 who observed a latitude dependence of the intensity of \glspl{CR} concluding this to be a deflection of the primary \glspl{CR} by the geomagnetic field of the earth which indicated that these rays must be charged particles. After this came the efforts of B. Rossi~\cite{rossi1933eigenschaften}, German group~\cite{schmeiser1938harten} and P. Auger~\cite{RevModPhys.11.288} all independently discovering coincident signals in separated Geiger counters which they explained by the counters being struck by an extensive particle shower triggered by a primary \gls{CR}. The phenomenon was named \textit{sciami} by Rossi, \textit{Luftshauer} by the German group and "Auger showers" by Auger and his collaborators. Auger went one step further and estimated the primary energy of the \gls{CR} via his superior setup giving rise to some questions about \glspl{CR} which are yet unanswered, how are they created and where are they coming from. One of the known sources which is the Sun is too close to explain some other high energy \glspl{CR} constantly hitting the Earth's atmosphere. Since then the field has only expanded with numerous experiments set up to characterize these \glspl{CR}. 
 
 The biggest of these experiments which looks for \glspl{UHECR} exists in 3000 km$^2$ patch of Argentinian pampa just outside Malargue called the Pierre Auger Observatory~\cite{Auger:2015}. It uses a combination of 1660 water Cherenkov tanks which form the \gls{SD} of the observatory and observe the air shower particles arriving at the ground along with Fluorescence Telescopes which can look at the development of shower as it travels through the atmosphere. Built primarily to answer the question of the cut-off of the cosmic ray spectrum also known as \gls{GZK} limit (or GZK cut-off), the observatory has provided immense contributions not only in the field of \glspl{CR} but also in the fields of Geophysics (elves)~\cite{Mussa_2022}, Dark matter (composition)~\cite{Abreu_2023} and multi-messenger physics (neutrino \& photon searches)~\cite{Aab_2019_point,Auger_photons_2022}. Currently, the \gls{SD} is undergoing an upgrade which will add a scintillator and radio antenna on top of the water Cherenkov tanks further increasing the sensitivity of the Observatory especially to the composition of the cosmic rays.
 
