--- a/thesis_skel/thesis_acknowledge.tex
+++ b/thesis_skel/thesis_acknowledge.tex
@@ -23,6 +23,11 @@ Lastly, I have been blessed with a wonderful set of friends who have been my fam
 
 A special thanks to Dr. Jannis Pawlowsky, Dr. Leonel Morejon and Fabian Becker for helping with the editing of this thesis. Thank you to Michael Schimp for always answering my various questions and solving my problems without which this thesis would have never been completed. A big thanks to the whole Astroteilchen group for the academic and moral support and all the laughs we have shared. 
 
+\begin{figure}[h!]
+    \centering
+    \includegraphics[width=0.65\textwidth]{thesis_figures/Poem_acknowledge.pdf}
+    \caption*{}
+  \end{figure}
 
 %%% Local Variables:
 %%% mode: latex
