--- a/thesis_skel/thesis_2009_skel.tex
+++ b/thesis_skel/thesis_2009_skel.tex
@@ -38,7 +38,16 @@
 \usepackage{array}
 \usepackage{caption}
 \usepackage{subcaption}
-% \usepackage{devnag}
+\usepackage{eso-pic}
+\newcommand\BackgroundPic{%
+\put(0,0){%
+\parbox[b][\paperheight]{\paperwidth}{%
+\vfill
+\centering
+\includegraphics[width=\paperwidth,height=\paperheight,%
+keepaspectratio]{thesis_figures/Title.pdf}%
+\vfill
+}}}
 % \usepackage[labelfont=bf]{caption}
 
 % \usepackage{lmodern}
