Some more changes to cover and CR chapter

--- a/cover/PhD_Submit_Title.tex
+++ b/cover/PhD_Submit_Title.tex
@@ -1,10 +1,15 @@
 %
 % Title page layout for submitted version.
-%\vspace*{2mm} \includegraphics[width=15mm]{../logos/blue_lowe.pdf}
+
+%\vspace*{2mm} 
 % old settings no vspace in title and 4ex in subtitle
 \AddToShipoutPicture*{\BackgroundPic}
-\title{\vspace*{-4.5cm}\includegraphics[width=5cm]{../logos/csm_Siegel_kleiner_f3fa80eafb.png}\\ \thesistitle }
-\subtitle{\vspace*{22ex}
+% \begin{minipage}[c][\textheight][t]{19mm}
+%   \includegraphics[width=15mm]{../logos/blue_lowe.pdf}
+% \end{minipage}
+
+\title{\vspace*{-4.3cm}\includegraphics[width=5cm]{../logos/csm_Siegel_kleiner_f3fa80eafb.png}\\ \thesistitle }
+\subtitle{\vspace*{19ex}
   \begin{otherlanguage}{ngerman}
     \textbf{\Large Dissertation}\\
     zur\\
