--- a/thesis_skel/thesis_CRnNu.tex
+++ b/thesis_skel/thesis_CRnNu.tex
@@ -117,20 +117,21 @@ The \gls{CR} spectrum measured by several experiments on Earth is summarised in 
 \end{equation}
 where $\gamma$ is the spectral index. The spectral index varies between 2.7 to 3.3 as measurements are made for higher energies. This signifies a decrease in the observed flux as the energy increases. The flux falls from $\mathrm{\sim 1m^{-2} s^{-1}}$ at $10^{11}$eV to $\mathrm{\sim 1m^{-2} yr^{-1}}$ at $10^{16}$eV to about $\mathrm{\sim 1km^{-2} yr^{-1}}$ at $10^{19}$eV. Such a steep fall also poses challenges for the experimental design and the corresponding size. This also affects the detection mechanisms employed to measure this spectrum, due to the very low flux expected at high energies, the measurements of the direct primaries become nearly impossible and an indirect detection using the property of the \gls{CR} to trigger an air shower in our atmosphere is employed. This phenomenon and how it is used to measure \glspl{CR} is discussed in the next chapter~\ref{chap:EAS}.
 
-\begin{figure}[t!]
-  \centering
-  \includegraphics[width=14.5cm]{thesis_figures/CRnNu/CR-spectrum.png}
-  \caption{Spectrum PDG, CRDB~\cite{ParticleDataGroup:2024cfk} (Which figure is better ?)}
-  \label{fig:CR-spectrum_scaled}
-\end{figure}
+% \begin{figure}[t!]
+%   \centering
+%   \includegraphics[width=14.5cm]{thesis_figures/CRnNu/CR-spectrum.png}
+%   \caption{Spectrum PDG, CRDB~\cite{ParticleDataGroup:2024cfk} (Which figure is better ?)}
+%   \label{fig:CR-spectrum_scaled}
+% \end{figure}
 
-To better deduce the features in the \gls{CR} spectrum one can scale the flux in the fig~\ref{fig:CR-spectrum} by energy. The corresponding figure is shown in fig.~\ref{fig:CR-spectrum_scaled}. Below $10^{13}$eV \glspl{CR} from the Sun dominate the spectrum. The galactic or extragalactic \glspl{CR} of these energies cannot enter our solar system because of a variety of reasons. These include a combination of the Heliosphere, Termination Shock and solar modulation which block the low energy \glspl{CR}. The Heliosphere which is a region influenced by the Sun's magnetic field and solar wind acts as a protective bubble around the solar system. Beyond the Heliosphere, the solar wind interacts with the ISM creating a region of termination shock which can cause scattering and deflection for incoming low energy \glspl{CR}. Additionally, the solar activity cycle can cause changes to the Heliosphere which in turn also affects the incoming \glspl{CR}. Beyond a few GeVs the Sun as a source of \glspl{CR} drops off due to reaching its maximum acceleration potential. Between $10^{13}$eV and $10^{18}$eV the spectrum is dominated by \glspl{CR} of galactic origin. This has been verified by comparing the spectral indices of the proposed acceleration mechanisms with the measured spectrum as mentioned before. A second proof also comes from the composition of the \glspl{CR} observed in these energies, but this is discussed later. \textit{Supernovae} and \textit{supernovae remnants} remain the most promising sources which could explain their origin. The spectral index, $\gamma \sim$ 2.7 gives a good description of this region. Around $\sim5 \times 10^{15}$ one observes a steepening of the spectrum known as the \textit{knee}. At this point $\gamma$ changes from 2.7 to 3.1. This is attributed to the galactic accelerators reaching their maximum potential for accelerating protons. Above the knee, the sources are expected to reach their maximum potential for other heavier particles until galactic sources cannot accelerate \glspl{CR} any further. This point is thought to be the origin of the second knee at $\sim 10^{17}$eV. At this point the $\gamma$ changes from 3.1 to 3.3. This is theorized to be a transition region in which the spectrum is believed to change from one of galactic origin to extragalactic origin. This region ends at about $\sim 10^{18}$eV whereon the spectrum hardens noticeably to a $\gamma \sim$ 2.6, originating what is referred to as the \textit{ankle}. Further, with increasing energy the spectrum again steepens to $\gamma \sim$ 5.1 reaching an eventual cutoff. The suppression of flux at these energies and the cutoff is still not properly understood yet and could be due to the following possibilities:
+% To better deduce the features in the \gls{CR} spectrum one can scale the flux in the fig~\ref{fig:CR-spectrum} by energy. The corresponding figure is shown in fig.~\ref{fig:CR-spectrum_scaled}. 
+Below $10^{13}$eV \glspl{CR} from the Sun dominate the spectrum. The galactic or extragalactic \glspl{CR} of these energies cannot enter our solar system because of a variety of reasons. These include a combination of the Heliosphere, Termination Shock and solar modulation which block the low energy \glspl{CR}. The Heliosphere which is a region influenced by the Sun's magnetic field and solar wind acts as a protective bubble around the solar system. Beyond the Heliosphere, the solar wind interacts with the ISM creating a region of termination shock which can cause scattering and deflection for incoming low energy \glspl{CR}. Additionally, the solar activity cycle can cause changes to the Heliosphere which in turn also affects the incoming \glspl{CR}. Beyond a few GeVs the Sun as a source of \glspl{CR} drops off due to reaching its maximum acceleration potential. Between $10^{13}$eV and $10^{18}$eV the spectrum is dominated by \glspl{CR} of galactic origin. This has been verified by comparing the spectral indices of the proposed acceleration mechanisms with the measured spectrum as mentioned before. A second proof also comes from the composition of the \glspl{CR} observed in these energies, but this is discussed later. \textit{Supernovae} and \textit{supernovae remnants} remain the most promising sources which could explain their origin. The spectral index, $\gamma \sim$ 2.7 gives a good description of this region. Around $\sim5 \times 10^{15}$ one observes a steepening of the spectrum known as the \textit{knee}. At this point $\gamma$ changes from 2.7 to 3.1. This is attributed to the galactic accelerators reaching their maximum potential for accelerating protons. Above the knee, the sources are expected to reach their maximum potential for other heavier particles until galactic sources cannot accelerate \glspl{CR} any further. This point is thought to be the origin of the second knee at $\sim 10^{17}$eV. At this point the $\gamma$ changes from 3.1 to 3.3. This is theorized to be a transition region in which the spectrum is believed to change from one of galactic origin to extragalactic origin. This region ends at about $\sim 10^{18}$eV whereon the spectrum hardens noticeably to a $\gamma \sim$ 2.6, originating what is referred to as the \textit{ankle}. Further, with increasing energy the spectrum again steepens to $\gamma \sim$ 5.1 reaching an eventual cutoff. The suppression of flux at these energies and the cutoff is still not properly understood yet and could be due to the following possibilities:
 
-1. \textbf{GZK Limit}: One of the most prevalent ideas behind the suppression and the cutoff is the GZK mechanism which was discussed above. Due to the observations of \glspl{CR} above the cutoff of $\sim 10^{19}$eV by the Pierre Auger Observatory and a non-observance of expected composition (non-proton primaries) and neutrino flux (GZK pion decay), GZK as the only reason for the observed cutoff in the spectrum is currently disfavoured. However, tensions between the composition measurements of the Pierre Auger Observatory and the \gls{TA}~\cite{kawai2008telescope}, the second-largest \gls*{CR} observatory, make this topic still a subject of debate.
+1. \textbf{GZK Limit:} One of the most prevalent ideas behind the suppression and the cutoff is the GZK mechanism which was discussed above. Due to the observations of \glspl{CR} above the cutoff of $\sim 10^{19}$eV by the Pierre Auger Observatory and a non-observance of expected composition (non-proton primaries) and neutrino flux (GZK pion decay), GZK as the only reason for the observed cutoff in the spectrum is currently disfavoured. However, tensions between the composition measurements of the Pierre Auger Observatory and the \gls{TA}~\cite{kawai2008telescope}, the second-largest \gls*{CR} observatory, make this topic still a subject of debate.
 
-2. \textbf{Maximum Rigidity}: In this scenario, the cutoff is due to the sources of the extragalactic \glspl{CR} reaching their maximum potential for acceleration for different particles i.e. maximum rigidity. Such a scenario is already observed in the spectrum for Galactic sources (\textit{knee}). An indirect proof of this mechanism can come from the observed composition from the \textit{ankle} region to the cutoff. If the composition shifts from lighter to heavier nuclei this would be proof of a cutoff at the potential extragalactic sources. 
+2. \textbf{Maximum Rigidity:} In this scenario, the cutoff is due to the sources of the extragalactic \glspl{CR} reaching their maximum potential for acceleration for different particles i.e. maximum rigidity. Such a scenario is already observed in the spectrum for Galactic sources (\textit{knee}). An indirect proof of this mechanism can come from the observed composition from the \textit{ankle} region to the cutoff. If the composition shifts from lighter to heavier nuclei this would be proof of a cutoff at the potential extragalactic sources. 
 
-3. Photo-disintegration: This effect was also discussed before in sec.~\ref{subsubsec:GZK}. However, for such a scenario the cutoff would appear in steps depending on the mass of the nuclei. 
+3. \textbf{Photo-disintegration:} This effect was also discussed before in sec.~\ref{subsubsec:GZK}. However, for such a scenario the cutoff would appear in steps depending on the mass of the nuclei. 
 
 It is likely that the cutoff and the suppression are not just because of one of the above-mentioned scenarios but are due to a combination of all three. In theory, \gls{GZK} and Photo-disintegration could explain the observed spectrum but the non-observance of \gls*{GZK} neutrinos and the composition measurements gather otherwise. It also shows that even though the CR spectrum gives a very nice overview, other crucial measurements of composition and multi-messengers play an equally important ally to the spectrum measurements for constraining the origin and propagation of \glspl{CR}.
 
@@ -247,16 +248,16 @@ Depending on the type of source and how far the said source is one can calculate
 \subsubsection*{Cosmogenic Neutrinos}
 \label{subsubsec:CosmoNu}
 
-Cosmogenic neutrinos are produced either as a consequence of the \gls{GZK} mechanism discussed in section~\ref{subsubsec:GZK} or due to the interactions of \glspl{UHECR} with \gls{EBL}. They were first suggested by Berensinsky and Zatsepin in 1969~\cite{Berezinsky:1970xj}. The processes involved are similar to those for astrophysical neutrinos albeit the proton/nuclei interact with the CMB/EBL photon instead of the photons from the radiation fields. The two main processes are the same as that for the GZK mechanism i.e. photo-pion production~\ref{eq:GZK} and photo-disintegration~\ref{eq:Pdisinteg}. \gls{CMB} mainly affects the protons~\cite{Ehlert_2024} during their propagation which form a large fraction of the \glspl{UHECR} traversing the universe while the EBL plays an important role in the case of other nuclei~\cite{Aloisio_2015}. 
-Since the processes are the same the flavor flux expectations at Earth remain the same. However, the expected energies that the cosmogenic neutrinos can acquire differ drastically as compared to astrophysical neutrinos. The energy threshold for neutrinos produced due to interactions with \gls*{CMB} in the case of photo-pion production is of the order of $10^{18}$eV while for photo-disintegration it is of the order of $10^{18}$eV~\cite{Aloisio_2015}. In the case of interactions with \gls*{EBL}, this lowers to about $10^{15}$eV and $10^{14}$eV for the two types of interactions. 
-The exact properties of the neutrinos produced are directly dependent on the parent \glspl*{UHECR} that produce them. The properties of \glspl{UHECR} such as the total flux, composition, maximum energies, production spectrum at the sources and their cosmological evolution (adiabatic losses) are all crucial factors that affect the  secondary cosmogenic neutrinos produced by these \glspl*{UHECR}. A collection of some examples of the expected cosmogenic neutrino fluxes for different scenarios can be found in ~\cite{KAMPERT2012660,AlvesBatista:2018zui,Heinze:2019jou}. One example are shown in fig~\ref{fig:model_nu_auger_mixed}. The two distinct humps are due to the two associated production processes with the lower one being the photo-disintegration. 
-
 \begin{figure}[t!]
   \centering
   \includegraphics[width=14.5cm]{thesis_figures/CRnNu/apjab05cef9_hr.jpg}
-  \caption{Figure from mixed fit(Will change to something simpler)~\cite{Heinze:2019jou}}
+  \caption{Allowed confidence ranges for cosmogenic neutrino fluxes obtained by varying the parameters regarding the source distribution and emission. The figure illustrates the two mechanisms of production of with the first peak corresponding to neutrinos from neutron decay and the peak at 10$^18$eV corrresponds to neutrinos prom meson decay. Taken from~\cite{Heinze:2019jou}}
   \label{fig:model_nu_auger_mixed}
 \end{figure}
+
+Cosmogenic neutrinos are produced either as a consequence of the \gls{GZK} mechanism discussed in section~\ref{subsubsec:GZK} or due to the interactions of \glspl{UHECR} with \gls{EBL}. They were first suggested by Berensinsky and Zatsepin in 1969~\cite{Berezinsky:1970xj}. The processes involved are similar to those for astrophysical neutrinos albeit the proton/nuclei interact with the CMB/EBL photon instead of the photons from the radiation fields. The two main processes are the same as that for the GZK mechanism i.e. photo-pion production~\ref{eq:GZK} and photo-disintegration~\ref{eq:Pdisinteg}. \gls{CMB} mainly affects the protons~\cite{Ehlert_2024} during their propagation which form a large fraction of the \glspl{UHECR} traversing the universe while the EBL plays an important role in the case of other nuclei~\cite{Aloisio_2015}. 
+Since the processes are the same, the flavor flux expectations at Earth remain the same. However, the expected energies that the cosmogenic neutrinos can acquire differ drastically as compared to astrophysical neutrinos. The energy threshold for neutrinos produced due to interactions with \gls*{CMB} in the case of photo-pion production is of the order of $10^{18}$eV while for photo-disintegration it is of the order of $10^{14}$eV~\cite{Aloisio_2015}. In the case of interactions with \gls*{EBL}, this lowers to about $10^{15}$eV and $10^{14}$eV for the two types of interactions. 
+The exact properties of the neutrinos produced are directly dependent on the parent \glspl*{UHECR} that produce them. The properties of \glspl{UHECR} such as the total flux, composition, maximum energies, production spectrum at the sources and their cosmological evolution (adiabatic losses) are all crucial factors that affect the  secondary cosmogenic neutrinos produced by these \glspl*{UHECR}. A collection of some examples of the expected cosmogenic neutrino fluxes for different scenarios can be found in ~\cite{KAMPERT2012660,AlvesBatista:2018zui,Heinze:2019jou}. One example are shown in fig~\ref{fig:model_nu_auger_mixed}. The two distinct humps are due to the two associated production processes with the lower one being the photo-disintegration. 
 
 Measurements of \gls*{CR} detection observatories such as the Pierre Auger Observatory can also be used to calculate an expected neutrino spectrum based on assumptions on the composition and the cosmological evolution of the sources. Neutrinos thus can act as a very important tool in constraining the composition of the incoming \glspl*{UHECR} and furthering their actual sources. They can also help to solve the question of the cutoff observed in the \gls*{UHECR} spectrum whether this is due to the \gls*{GZK} mechanism (proton-dominated composition) or sources reaching their maximum potential as theorized by Hillas (mixed composition). The current results regarding this important study are discussed in section~\ref{subsec:Nuresults}
 
